# mlops-sandbox

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-monitor.yaml  docker-compose.yaml  pyproject.toml
docker/grafana/dashboards/: ml_pipeline_observability.json
docker/otel-collector/config/: otel-collector-config.yaml
docker/prometheus/config/: prometheus.yaml
pipelines/video_anonymization/: README.md  docker-compose.yaml
pipelines/video_anonymization/app/: base.py  run_pipeline.py  run_pipeline_v2.py
pipelines/video_anonymization/app/docker/: Dockerfile  requirements.txt
pipelines/video_anonymization/app/tests/: test_segmentation_based_anonymization.py
pipelines/video_anonymization/infra/grafana/export/: ml-pipeline-observability.json
pipelines/video_anonymization/infra/otel-collector/config/: otel-collector-config.yaml
services/detection/: filtering.py  visualize.py  yolov9.py
services/detection/detr/: model.py
services/detection/tests/: test_filtering.py
services/monitoring/: README.md
services/monitoring/exporter/: wandb_spanmetrics_exporter.py
services/monitoring/exporter/tests/: test_wandb_spanmetrics_exporter.py
services/monitoring/tools/: run_otel_in_wandb.py
services/pose_estimation/: const.py  transpose.py  utils.py  visualize.py
services/segmentation/sapience/: Makefile  adhoc_image_dataset.py  classes_and_palettes.py  wrapper.py
services/segmentation/sapience/tests/: test_wrapper.py
services/segmentation/sapience/tools/: vis_seg.py
services/segmentation/sapiens/: Makefile  README.md  const.py  wrapper.py
services/segmentation/sapiens/tests/: test_wrapper.py
services/segmentation/sapiens/tools/: README.md  run_inference.py  vis_seg.py
services/segmentation/sapiens/tools/samples/: .gitignore  README.md
services/toy_models/simple_cnn/: simple_cnn.py
services/toy_models/simple_cnn/tests/: test_pytorch.py
services/toy_models/simple_cnn/tools/: convert_to_onnx.py  convert_to_onnx_torchscript.py
services/toy_models/simple_transformer/: simple_transformer.py
services/toy_models/simple_transformer/tests/: test_onnx_runtime.py  test_pytorch.py
services/toy_models/simple_transformer/tools/: convert_to_onnx.py
triton_experiments/concurrent_model_exec/: client.py
triton_experiments/onnx_backend/: client_cnn.py  client_transformer.py
