[tool.poetry]
name = "mlops-sandbox"
version = "0.1.0"
description = ""
authors = ["Naoya Yoshimura <yoshimura708x@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "services" },
    { include = "triton_experiments" },
]

[tool.poetry.dependencies]
click = "^8.1.7"
loguru = "^0.7.2"
onnx = "^1.16.1"
onnxruntime = "^1.18.1"
onnxsim = "^0.4.36"
opencv-python = "^4.10.0.84"
opentelemetry-distro = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"
pandas = "^2.2.2"
python = "^3.10"
torch = "^2.3.1"
tqdm = "^4.66.4"
tritonclient = {extras = ["grpc"], version = "^2.47.0"}
torchvision = "^0.19.1"
wandb = "^0.18.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.5"
pytest-mock = "^3.14.0"


[tool.poetry.group.gpu.dependencies]
tritonclient = {extras = ["all"], version = "^2.47.0"}
cuda-python = "12.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-rsxX --tb=short --strict-markers -v --ff"
markers = [
    "unit: mark a test as a unit test",
    "inference: mark a test as an inference test",
    "test_requires_data: mark a test as a test that requires some data to be downloaded",
]
testpaths = [
  "services/",
  "pipelines/",
  "triton_experiments/",
]

[tool.coverage.run]
omit = ["**/tests/*", "**/external/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  deepstream/
  | pytriton/
  | triton_tutorials/
)
'''


[tool.isort]
profile = "black"
src_paths = ["services", "pipelines", "triton_experiments"]


[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "c-extension-no-member",
  "consider-using-f-string",
  "duplicate-code",
  "fixme",
  "import-error",
  "line-too-long",
  "logging-fstring-interpolation",
  "missing-class-docstring",
  "missing-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-else-return",
  "no-member",
  "no-value-for-parameter",
  "protected-access",
  "redefined-outer-name",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-positional-arguments",
  "unspecified-encoding",
  "unused-argument",
  "wrong-import-order",
]
